<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.main_searchview.SearchViewFragment">

    <include
        android:id="@+id/search_button_container"
        layout="@layout/search_button_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/search_hashtag_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button_container"
        android:hint="해시태그 검색"
        android:fontFamily="@font/maruburi_light"
        style="@style/BIG_BLACK"
        tools:visibility="visible"/>

    <EditText
        android:id="@+id/search_content_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button_container"
        android:hint="내용 검색"
        android:fontFamily="@font/maruburi_light"
        style="@style/BIG_BLACK"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/search_content_query_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:src="@drawable/searchbuttonx4"
        app:layout_constraintStart_toEndOf="@+id/search_content_edittext"
        app:layout_constraintTop_toTopOf="@+id/search_content_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/search_content_edittext"
        android:visibility="invisible"
        />

    <ListView
        android:id="@+id/search_content_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/search_content_edittext"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hashtag_complete_list"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/search_hashtag_edittext"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible" />


    <ListView
        android:id="@+id/search_hashtag_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintTop_toBottomOf="@+id/hashtag_complete_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/search_content_no_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_content_no_result"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/search_content_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        android:fontFamily="@font/maruburi_regular"
        android:textColor="@color/darkgray" />


</androidx.constraintlayout.widget.ConstraintLayout>