<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_button_container"
    tools:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/search_hashtag_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:fontFamily="@font/maruburi_bold"
        style="@style/NORMAL_WHITE"
        android:background="@drawable/button_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_content_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/search_content_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:layout_marginStart="10dp"
        android:fontFamily="@font/maruburi_bold"
        style="@style/NORMAL_WHITE"
        android:background="@drawable/button_small"
        app:layout_constraintStart_toEndOf="@id/search_hashtag_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>